fixed sidebar padding by changing maxheight to precent overflow

--- a/next-js/src/styles/globals.css
+++ b/next-js/src/styles/globals.css
@@ -9,7 +9,7 @@
  */
 
 .sidebar-height {
-  height: calc(100vh - 64px);
+  height: calc(100vh - 66px);
 }
 
 .neon-text {
